# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.84 $ $Date: 2008-09-22 21:43:46 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2008-09-22  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing XML parser in file "xml_converter.c"

2008-09-21  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing XML parser in file "xml_converter.c"

2008-09-20  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing XML parser in file "xml_converter.c"

2008-09-19  Christian Heller  <christian.heller@tuxtax.de>
        * Continue implementing CYBOL parser in file "cybol_converter.c"
        * Add file "model_allocator.c"; a "model" is a memory structure together
            with its "count" and "size" as meta information about that memory structure
        * Add file "part_allocator.c"; a "part" is a memory structure of arbitrary abstraction;
            a part may be added as entry to a compound, but it is not to be mixed up with the "compound" structure itself;
            a part contains information ("name" and "abstraction") about the "model" it contains,
            and optionally further meta information ("details) which is also called properties
        * Add file "xml_converter.c", so that all kinds of XML files can now be translated into a compound tree,
            which afterwards can be converted in a second step into an arbitrary memory structure;
            this is comparable to the well-known Document Object Model (DOM) approach;